data/derived/fa15/progs/unify/prog1096.ml.out
Characters 148-149:
  let seen' = if (List.mem seen h) = false then seen@[h] else seen in
                                                      ^
Error: This expression has type 'a list list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list list
